# code-explainer

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
code_explainer/: app.py  explainer.py  text2speech.py
